		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v1.8.2r14 <*-

??032001 (v1.9dev4)
	- added: -C - disable interactive mode; reverse op. for -c
	- added: -X - open outputs for updateing; rev.op. for -x
	- added: -r:-1 to disabled raised-priority mode		
	- added: -z:nopsr, -z:noxruns and -z:intbuf ; rev.ops for
		 existing -z options
	- added: 'user-resource-directory' define to ~/.ecasoundrc;
		 see ecasoundrc(5) for details
	- changed: ecasoundrc - the default midi-device has to be 
		   given using the new 'type,device' syntax; defaults
		   to 'rawmidi,/dev/midi'
	- changed: man pages are now distributed in nroff 'man' format
	- fixed: mpg123 instances weren't always properly cleaned
	- fixed: loop-device code wasn't working
	- fixed: more ewf-fixes
	- fixed: removal of static object maps might cure some
		 C++ compatibility problems (no user-visible changes) 
	- fixed: if connected, trying to remove the last chainsetup
		 failed (possible core dump if debug disabled)
	- fixed: when used as inputs, 'null' and 'rtnull' now produce
	  	 silence instead of random data (=noise)
02032001 (v1.9dev3)
	- added: ecaplay - ctrl-c skips to the next file
	- changed: -Md syntax to '-Md:rawmidi,device_name', where
		   'rawmidi' specifies the type while 'device_name' 
	  	   refers to a file/device name
	- fixed: MIDI-thread hang when exiting ecasound 
	- fixed: various ewf-related fixes
	- fixed: eiam - rounding errors with 'rw' and 'fw' commands
	- fixed: ecaplay - seg.faults when playing multiple files
	- fixed: object cleanup was not properly done if ecasound 
		 received signals while multiple threads were 
		 running ("pure virtual method called" warnings)