@@ -85,9 +85,8 @@
 <p><p></p><dt><strong>user-resource-directory</strong><dd>
   	Directory for user-specific ecasound configuration files.
 	If this directory exists, ecasound will search for 
-	filenames defined assigned to global resources (specified 
+	filenames assigned to global resources (specified 
 	with resource-file-*). Defaults to <em>~/ecasound-config</em>.
-<p>Defaults to <em>{prefix-dir}/share/ecasound</em>.
 <p><p></p><dt><strong>internal-plugin-directory</strong><dd>
 	Directory containing ecasound's internal plugins. Defaults to <em>{prefix-dir}/lib/ecasound-plugins</em>.
 <p><p></p><dt><strong>ladspa-plugin-directory</strong><dd>
