@@ -72,10 +72,8 @@ resource directory\&. Defaults to \fIeffect_presets\fP\&.
 .IP "user-resource-directory" 
 Directory for user-specific ecasound configuration files\&.
 If this directory exists, ecasound will search for 
-filenames defined assigned to global resources (specified 
+filenames assigned to global resources (specified 
 with resource-file-*)\&. Defaults to \fI~/ecasound-config\fP\&.
-.IP 
-Defaults to \fI{prefix-dir}/share/ecasound\fP\&.
 .IP 
 .IP "internal-plugin-directory" 
 Directory containing ecasound\'s internal plugins\&. Defaults to \fI{prefix-dir}/lib/ecasound-plugins\fP\&.
